Add multiple fixes

--- a/.babelrc
+++ b/.babelrc
@@ -3,6 +3,7 @@
 		"latest"
 	],
 	"plugins":[
-		["transform-react-jsx", { "pragma":"h" }]
+		["transform-react-jsx", { "pragma":"h" }],
+		"transform-decorators-legacy"
 	]
 }
